fixed some text showing even after code is collapsed

--- a/src/components/VisualEditor/VisualEditor.scss
+++ b/src/components/VisualEditor/VisualEditor.scss
@@ -49,6 +49,7 @@
 
   &.collapsed {
     overflow: hidden;
+    padding-left: 0;
     width: 0;
   }
 }
